Test/dafny0/ExternNegative2.dfy.expect
ExternNegative2.dfy(24,24): Error: Modules 'Mod1' and 'Mod2' both have CompileName 'Modx'.
1 resolution/type errors detected in ExternNegative2.dfy
